--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Github Pages
+name: Node.js CI
 
 on:
   push:
@@ -18,8 +18,6 @@ jobs:
     steps:
     - name: Checkout 🛎️
     - uses: actions/checkout@v3
-    
-    
     
     - name: Install and Build 🛠
       uses: actions/setup-node@v3
