--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -73,6 +73,9 @@ jobs:
           path: ./out
 
   deploy:
+    if: 
+      github.event_name == 'push' &&
+      github.ref == 'refs/heads/main'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
