--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.4.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@orange_digital/chakra-datepicker": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-redux": "^7.1.24",
     "formik": "^2.2.9",
